Thu Nov  4 13:51:24 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Makefile.am:

	  Updated for recent *.mpc changes, HTIOP, etc.

	* orbsvcs/orbsvcs/FTORB.mpc:

	  Added PortableGroup_Simple_DSS.h and
	  FaultTolerance/FT_ORB_Utils_export.h to Header_Files.

	* orbsvcs/orbsvcs/FaultTolerance.mpc:

	  Added FaultTolerance/fault_tol_export.h to Header_Files.

	* orbsvcs/orbsvcs/PortableGroup.mpc:

	  Added PortableGroup/portablegroup_export.h to Header_Files.

Thu Nov  4 13:14:24 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Security/Secure_Invocation/server.cpp:

          Moved a servant implementation object outside of a constrained
          scope so that it is still around when the POA is destroyed.

Thu Nov  4 12:35:02 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFR_Service_Utils.cpp:

          Fixed potential memory leak in the Interface Repository which
          happens when open() is called on a just-allocated
          ACE_Configuration pointer. If the call fails, the method
          was returning without deleting the pointer. Thanks to
          Gary Maxey <gary.maxey@hp.com> for reporting the problem.

Thu Nov  4 12:09:00 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:

          Fixed a bug in the creation of an abstract interface entry
          in the Interface Repository. This creation requires a list
          of parents, and the list must be a CORBA sequence of
          AbstractInterfaceDef. All other interface entries need a
          sequence of InterfaceDef parents. So a separate sequence
          was declared for the purpose in the IFR loader, but the
          wrong one was getting updated with the abstract interface's
          parent info in the AST. When the correct (but uninitialized)
          sequence was passed in the IFR call, a BAD_PARAM exception
          resulted.
